fix(annotation): 修复标注控制器和服务中的消息源及几何处理问题
- 更正AnnotationController中insert方法返回类型从String改为Annotation
- 替换MessageSource.M为MessageSourceUtil.getMessage统一消息处理
- 移除Annotation实体中coordinatesGeojson字段的数据库映射注解
- 在AnnotationProperties中添加tagId字段支持
- 修复AnnotationServiceImpl中几何对象更新时的属性设置逻辑
- 改进stickup方法中对象复制避免直接修改原对象的问题
- 优化撤销重做功能中的异常处理和状态检查逻辑
- 修复测量服务中的参数验证和删除操作的消息处理